# blacklight

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  ISSUES.md  LLM_TOKEN_USE.md  README.md  ROADMAP.md  TECH-PLAN.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
companion/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
companion/dist-electron/: main.js  preload.js
companion/electron/: main.ts  preload.ts
companion/src/: App.css  App.tsx
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/components/: ActivityHeatmap.vue  ContentBlock.vue  DailyChart.vue  (+11 more)
scripts/: screenshots.mjs
src/: classifier.rs  config.rs  config_template.toml  content.rs  db.rs  digest.rs  digest_migration.sql  enrich.rs  enrich_migration.sql  error.rs  index_run_migration.sql  lib.rs  main.rs  models.rs  notifications.rs  outcome_migration.sql  provenance_migration.sql  schedule_migration.sql  schema.sql  version_migration.sql
src/db/: query_builder.rs
src/indexer/: change.rs  codex.rs  db_ops.rs  file_paths.rs  gemini.rs  handlers.rs  jsonl.rs  mod.rs  provider.rs  redact.rs  router.rs  scanner.rs  sessions.rs  structured.rs
src/server/: classifier_actor.rs  embedded.rs  errors.rs  indexer_actor.rs  mod.rs  params.rs  responses.rs  router.rs  scheduler.rs  state.rs
tests/: content_test.rs  db_test.rs  indexer_test.rs  models_test.rs  search_query_test.rs
(+47 files in other folders)
