[package]
name = "blacklight"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
open = "5"
dirs = "6"

[dev-dependencies]
tempfile = "3"
